changes in logo

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="author" content="AG Design , Developer: Ashish Gtm, Designer: Ashish Gtm, Copywriter: Ashish Gtm." />
+    <meta name="author" content="Developer: Ashish Gtm, Designer: Ashish Gtm, Copywriter: Ashish Gtm." />
     <meta
       name="description"
       content="Web site created using create-react-app"
