changes in index

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Developer: Ashish Gtm, Designer: Ashish Gtm, Copywriter: Ashish Gtm." />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Lexis Education Center"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
