changes in index

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Developer: Ashish Gtm, Designer: Ashish Gtm, Copywriter: Ashish Gtm." />
     <meta
       name="description"
-      content="Lexis Education Center"
+      content="We are one of the leading consultancies in the region, dedicated to guiding students toward their academic and career aspirations."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
